# xyz-sdr

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  codecov.yml  conftest.py  install-drivers.bat  install-drivers.ps1  main.py  pyproject.toml  pytest.ini  release-please-config.json  requirements-ai.txt  requirements-dev.txt  requirements.txt  roadmap.md  tasks.py  xyz-sdr.bat  xyz-sdr.ps1
.cursor/rules/: mario-agent-protocol.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
ai/: __init__.py
config/: defaults.toml  local.toml.example
config/bands/: airband.toml  fm_broadcast.toml  hf_lsb.toml  pmr446.toml
core/: __init__.py  audio_effects.py  audio_output.py  auto_demod.py  band_buffer.py  band_profiles.py  bookmarks.py  config_store.py  console_utf8.py  crash_ui.py  device.py  diagnose_sdrplay.py  display_levels.py  driver_runtime.py  dsp.py  dsp_profiles.py  formatting.py  input_modifiers.py  logging_config.py  passband.py  plugins.py  python_runtime.py  recorder.py  runtime_paths.py  rx_warmup.py  scanner.py  sdr_io.py  sdrplay_enumerate.py  sdrplay_forensics.py  sdrplay_install_guard.py  sdrplay_preflight.py  sdrplay_repair.py  sdrplay_service.py  sdrplay_stream_matrix.py  sdrplay_usb.py  sdrplay_wer.py  sdrplay_wizard.py  session_exit.py  session_log.py  soapy_runtime.py  (+5 more)
docs/: README.md  ai.md  api-control-plane.md  architecture.md  audio-presets-research.md  audio.md  bandwidth.md  bookmarks.md  configuration.md  customization.md  display.md  dsp.md  dx-packaging.md  hardware.md  installer-i18n.md  installer.md  logging.md  observability.md  onboarding.md  passband.md  plugins.md  recorder.md  requirements-locking.md  roadmap-platform.md  roadmap.md  scanner.md  sdrplay-matrix.md  testing.md  uv_runtime.md  widgets.md
docs/handoff/: sdrplay-matrix-0.2-mario.md
docs/issue_templates/: segfault_template.md
drivers/: README.md
drivers/win-x64/: manifest.json
examples/xyz_sdr_cw_strict/: README.md  pyproject.toml
examples/xyz_sdr_cw_strict/tests/: test_cw_strict.py
examples/xyz_sdr_cw_strict/xyz_sdr_cw_strict/: __init__.py
resources/: __init__.py
scripts/: bench_rx_fps.py  diagnose_sdrplay.ps1  enable_wer_minidumps.ps1  harness.ps1  list_soapy_devices.py  restore_terminal.ps1  run.bat  run.ps1  run.sh  sdrplay_stream_matrix.ps1  soak_bandwidth.ps1  stage_soapy_runtime.ps1  test.bat  test.ps1  test.sh  test_fm98.ps1  test_sdrplay_data.py  xyz-sdr.cmd
setup/: bundled_installers.py  capture_ui.py  check_env.py  env_state.py  install_actions.py  install_app.ps1  install_drivers.bat  install_drivers.ps1  install_drivers.py  install_guidance.py  install_i18n.py  install_log.py  install_menu.py  install_sdrplay_api.bat  install_sdrplay_api.ps1  install_sdrplay_api.py  install_soapy_sdrplay3.ps1  install_splash.py  install_wizard.py  repo_update.py  sdrplay_repair.py  soapy_sdrplay3.py  windows_installers.py
tui/: __init__.py  app.py  bandwidth.py  display_sync.py  rx_worker.py  splash.py  storage.py  viewport.py
tui/harness/: __init__.py  (+4 more)
(+124 files in other folders)
