[project]
name = "xyz-sdr"
version = "0.1.0"
description = "Terminal SDR controller with spectrum and waterfall TUI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
ai = ["faster-whisper>=1.0", "scikit-learn>=1.3", "joblib>=1.3"]

[project.scripts]
xyz-sdr = "main:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["resources/test"]
pythonpath = ["."]
cache_dir = "var/pytest_cache"
addopts = "--basetemp=var/pytest-tmp"
markers = [
    "slow: tests that take several seconds",
    "integration: external services or timing-sensitive I/O",
]

[tool.coverage.run]
source = ["core", "setup", "tui"]
omit = ["resources/test/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [".venv", "var", "build", "dist", ".cursor", "resources/test"]

[tool.ruff.lint]
# Standard rule set: pycodestyle, pyflakes, pyupgrade, bugbear, comprehensions, simplify
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long (formatter handles)
    "B008",   # function call in default argument (used in Textual patterns)
    "B904",   # raise from (lints can be noisy on existing code)
    "UP038",  # isinstance tuple form (deprecation noise)
]

[tool.ruff.lint.per-file-ignores]
"resources/test/*" = ["B011"]  # asserts OK en tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"